# YAIP

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INIFile.g4  INILexer.g4  INIParser.g4  LICENSE.TXT  README.md  YAIP++.cpp  YAIP++.h  YAIP++Data.h  YAIP.cbp  YAIP.cppcheck  YAIP.ini  YAIP.sln  YAIP.smproj  antlr4.bat  antlr4.sh  base.bat  base.sh  codecov.yml  compile.bat  compile.sh  generate.bat  generate.sh  git_init.bat  git_update.bat  grun.bat  grun.sh  main.cpp  vs-pre-build.bat
_IDE/: README.md
_IDE/Batch/: Build.bat
_IDE/CodeBlocks/: YAIP.cbp
_IDE/VS2010/: YAIP.vcxproj
_IDE/VS2013/: YAIP.vcxproj
_IDE/VS2015/: YAIP.sln  YAIP.vcxproj
_IDE/VS2017/: YAIP.sln  YAIP.vcxproj
doxygen/: README.md  YAIP++.doxy  YAIP.doxy
doxygen/html/: annotated.html  annotated.js  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  files.html  files.js  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherits.html  menudata.js  namespacemembers.html  namespacemembers_type.html  namespaces.html  namespaces.js  navtree.js  navtreedata.js  navtreeindex0.js  pages.html
doxygen/html-crap/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions_vars.html  graph_legend.html  hierarchy.html  inherit_graph_3.map  namespacemembers.html  namespacemembers_type.html  namespaces.html  namespaces.js  navtreedata.js  navtreeindex0.js  pages.html
doxygen/html-crap/d0/dc0/: a00033.map
doxygen/html-crap/d1/d2b/: a00018.html  a00018.md5
doxygen/html-crap/d1/d84/: a00052.html
doxygen/html-crap/d1/dc6/: a00037.map
doxygen/html-crap/d2/d79/: a00051.html  a00051_a73da1225dc9361306f5c5c023918b119_cgraph.md5  a00051_afde94dd7c14b08ca9005e725895df7ad_cgraph.map  a00051_afde94dd7c14b08ca9005e725895df7ad_cgraph.md5
doxygen/html-crap/d2/de7/: a00014.html  a00014.map
doxygen/html-crap/d3/d8b/: a00059.js
doxygen/html-crap/d3/de7/: a00039.html
doxygen/html-crap/d4/d51/: a00017.map  a00017.md5
doxygen/html-crap/d4/d6d/: a00055.js
doxygen/html-crap/d4/d8c/: a00035.html
doxygen/html-crap/d4/dee/: a00008.html
doxygen/html-crap/d5/d16/: a00029.md5
doxygen/html-crap/d6/d2d/: a00047.html  a00047.js
doxygen/html-crap/d6/d42/: a00043.html
doxygen/html-crap/d6/d97/: a00045.map  a00045.md5
doxygen/html-crap/d7/d46/: a00002.html  a00002.js  a00002_source.html
doxygen/html-crap/d7/d7a/: a00016.html
doxygen/html-crap/d7/dd4/: a00013.map
doxygen/html-crap/d7/dec/: a00010.html  a00010.js  a00010.map
doxygen/html-crap/d9/d2e/: a00056.html
doxygen/html-crap/da/d45/: a00011.html  a00011.js  a00011.map  a00011.md5  a00011_source.html
doxygen/html-crap/da/da0/: a00009.js  a00009.md5
doxygen/html-crap/search/: all_0.js  all_c.js  classes_0.js  classes_2.js  functions_0.js  searchdata.js  variables_0.js  variables_3.js
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  pages_0.js  search.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js
grammar/: HelloBaseListener.cpp  HelloBaseListener.h  HelloBaseVisitor.cpp  HelloBaseVisitor.h  HelloLexer.cpp  HelloLexer.h  HelloListener.cpp  HelloListener.h  HelloParser.cpp  HelloParser.h  HelloVisitor.cpp  HelloVisitor.h  IniFile.g4  IniFileBaseListener.cpp  IniFileBaseListener.h  IniFileLexer.cpp  IniFileLexer.h  IniFileListener.cpp  IniFileListener.h  IniFileParser.cpp  IniFileParser.h
src/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  YAIP++  YAIP++.cpp  YAIP++.h  YAIP++Data.h  YAIP.sln  YAIP.vcxproj  YAIPTest.cpp  cmake_install.cmake  main.cpp  main_catch.h  main_classic.cpp  main_classic.h  main_fixtures.cpp  main_fixtures.h  sample.ini
src/YAIP/: Convert.cpp  Convert.h  IAddFromRaw.h  IElementComment.h  IElementIdentifier.h  IElementValue.h  IEntryList.h  IniEntry.cpp  IniEntry.h  IniEntryList.cpp  IniEntryList.h  IniSection.cpp  IniSection.h  IniSectionList.cpp  IniSectionList.h  TIniElementList.h  YAIP++.cpp  YAIP++.h  YAIP.cpp  YAIP.h  YAIP.vcxproj  main.cpp  main_catch.h  test_bool.h  test_char.h  test_double.h  test_float.h  test_integer.h  test_long.h  test_short.h  test_string.h  test_unsigned_char.h  test_unsigned_integer.h  test_unsigned_long.h  test_unsigned_short.h  test_yaip.cpp  tests.cpp
src/YAIP/ITests/: test_YAIP.h  test_bool.h  test_char.h  test_double.h  test_float.h  test_int.h  test_integer.h  test_long.h  test_short.h  test_string.h  test_unsigned_char.h  test_unsigned_int.h  test_unsigned_integer.h  test_unsigned_long.h  test_unsigned_short.h
src/YAIP/UTests/: test_Convert.h  test_IniEntry.h  test_IniEntryList.h  test_IniSection.h
src/YAIP/YAIP/: Convert.cpp  Convert.h  IAddFromRaw.h  IElementCommon.h  IniEntry.cpp  IniEntry.h  IniEntryList.cpp  IniEntryList.h  IniSection.cpp  IniSection.h  IniSectionList.cpp  IniSectionList.h  TIniElementList.h  YAIP.cpp  YAIP.h  string_extensions.cpp  string_extensions.h
src/lib/: CMakeLists.txt  Convert.cpp  Convert.h  IElementCommon.h  IniEntry.cpp  IniEntry.h  IniEntryList.cpp  IniEntryList.h  IniSection.cpp  IniSection.h  IniSectionList.cpp  IniSectionList.h  TIniElementList.h  YAIP.cpp  YAIP.h  YAIP.vcxproj  string_extensions.cpp  string_extensions.h
src/testlib/: CMakeLists.txt  testlib.cpp  testlib.vcxproj
src/testlib/ITests/: test_YAIP.h
src/testlib/UTests/: test_Convert.h  test_IniEntry.h  test_IniEntryList.h  test_IniSection.h
(+173 files in other folders)
