CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
PROJECT(YAIP VERSION 1.0.0 LANGUAGES CXX)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(testlib)

SET(dir ${CMAKE_CURRENT_SOURCE_DIR}/../Build/)
SET(EXECUTABLE_OUTPUT_PATH ${dir} CACHE PATH "Build directory" FORCE)
SET(LIBRARY_OUTPUT_PATH ${dir} CACHE PATH "Build directory" FORCE)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${dir})
SET(CMAKE_BUILD_FILES_DIRECTORY ${dir})
SET(CMAKE_BUILD_DIRECTORY ${dir})
SET(CMAKE_BINARY_DIR  ${dir})
SET(EXECUTABLE_OUTPUT_PATH ${dir})
SET(LIBRARY_OUTPUT_PATH ${dir}lib)
SET(CMAKE_CACHEFILE_DIR ${dir})