CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
PROJECT(TESTYAIP VERSION 1.0.0 LANGUAGES CXX)

ADD_EXECUTABLE(TESTYAIP
	testlib.cpp
	../../externals/Catch2/single_include/catch2/catch.hpp
	ITests/test_YAIP.h
	UTests/test_Convert.h
	UTests/test_IniEntry.h
	UTests/test_IniEntryList.h
	UTests/test_IniSection.h
)

# TARGET_COMPILE_OPTIONS(TESTYAIP PRIVATE -Werror)

SET (CMAKE_CXX_STANDARD 11)

TARGET_INCLUDE_DIRECTORIES(TESTYAIP PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../lib>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../externals/Catch2/single_include>  
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/ITests>  
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/UTests>  
)

LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../lib)
TARGET_LINK_LIBRARIES(TESTYAIP YAIPLIB)